--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ body {
   position: absolute;
   width: 76px;
   height: 76px;
-  background: #ffffff;
+  background: #ffffff1f;
   box-shadow: 0px 12px 28px rgba(0, 0, 0, 0.03);
   border-radius: 40px;
   top: 0px;
@@ -156,6 +156,12 @@ body {
   opacity: 0;
   transform: scale(0.9);
   transition: opacity 300ms, transform 300ms;
+}
+
+.price-extra {
+  color: #383838;
+  font-size: 16px;
+  font-weight: 400;
 }
 
 .button-secondary:focus {
