--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,25 @@ input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+/* html {
+  height: 100%;
+} */
+
+/* body {
+  height: 100%;
+} */
+
+/* div#root {
+  height: 100%;
+} */
 body {
+  font-family: avenir, sans-serif;
   background: #fafafa;
 }
+
+/* main {
+  height: 100%;
+} */
 
 .full-height {
   height: 100%;
@@ -23,6 +39,9 @@ body {
   border-radius: 56px;
   width: 98px;
   height: 148px;
+  vertical-align: middle;
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,6 +50,47 @@ body {
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.toppings-container:active {
+  transform: scale(0.9);
+  transition: transform 0.36s;
+}
+.toppings-container::before {
+  border: 2px solid #e5c3f5;
+  opacity: 0;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+}
+
+.toppings-container::before,
+.toppings-container::after {
+  content: "";
+  z-index: -1;
+  border-radius: inherit;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  -webkit-transition: -webkit-transform 0.2s, opacity 0.2s;
+  transition: transform 0.2s, opacity 0.2s;
+  -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+}
+
+.toppings-container:hover::before {
+  opacity: 1;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+}
+.toppings-container:hover::after {
+  opacity: 0;
+  -webkit-transform: scale3d(0.8, 0.8, 1);
+  transform: scale3d(0.8, 0.8, 1);
 }
 
 .toppings-container__selected {
@@ -78,7 +138,7 @@ body {
   color: #383838;
 }
 
-.box {
+.form {
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -86,6 +146,78 @@ body {
   border-radius: 72px;
   width: 438px;
   height: 88px;
+}
+
+.form--discount {
+  width: 312px;
+  height: 56px;
+  border-radius: 72px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: #ececf3;
+  font-size: 12px;
+}
+
+.form--small {
+  width: 312px;
+  height: 56px;
+  border-radius: 72px;
+  display: flex;
+  align-items: center;
+  background: #ececf3;
+  font-size: 12px;
+}
+.form--smaller {
+  width: 148px;
+  height: 56px;
+  border-radius: 72px;
+  display: flex;
+  align-items: center;
+  background: #ececf3;
+  font-size: 12px;
+}
+.discountInput {
+  font-size: 20px;
+  margin-left: 40px;
+}
+
+.completed-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 0px;
+  justify-items: center;
+  align-items: center;
+  justify-content: end;
+  align-content: center;
+  height: 100vh;
+}
+
+.completed-grid__element1 {
+  grid-area: 1 / 2 / 2 / 3;
+  justify-self: end;
+}
+.completed-grid__element2 {
+  grid-area: 1 / 3 / 2 / 6;
+  justify-self: start;
+}
+
+.button-finish {
+  color: #ffffff;
+  width: 312px;
+  height: 68px;
+  border-radius: 36px;
+  background: linear-gradient(93.49deg, #b490df 4.76%, #c697e9 98.36%);
+}
+
+.button-another {
+  background: #b95de4;
+  color: #ffffff;
+  height: 68px;
+  width: 187px;
+  border-radius: 48px;
 }
 
 .order-check input[type="number"] {
@@ -164,26 +296,6 @@ body {
   font-weight: 400;
 }
 
-.button-secondary:focus {
-  background-color: #ffffff;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
-}
-
-.button-secondary__active {
-  background-color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #dbdbdb;
-  padding: 20px 52px;
-  box-sizing: border-box;
-  border-radius: 36px;
-}
-
-/* .button-secondary:active {
-  background-color: #ffffff;
-} */
-
 input[type="radio"] {
   opacity: 0;
   position: fixed;
@@ -198,14 +310,53 @@ label {
   font-size: 16px;
 }
 
-input[type="radio"]:hover + label {
-  border: 2px solid #ffffff;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
+.radio-button {
+  vertical-align: middle;
+  position: relative;
+  z-index: 1;
 }
 
 input[type="radio"]:checked + label {
   background-color: #ffffff;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
+  transform: scale(1.05);
+}
+
+.radio-button::before {
+  border: 2px solid #ffffff;
+  opacity: 0;
+  -webkit-transform: scale3d(1.2, 1.2, 1);
+  transform: scale3d(1, 1, 1);
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+}
+
+.radio-button::before,
+.radio-button::after {
+  content: "";
+  z-index: -1;
+  border-radius: inherit;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+  transition: transform 0.3s, opacity 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+}
+
+.radio-button:hover::before {
+  opacity: 1;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+}
+.radio-button:hover::after {
+  opacity: 0;
+  -webkit-transform: scale3d(0.8, 0.8, 1);
+  transform: scale3d(0.8, 0.8, 1);
 }
 
 .button-secondary {
@@ -216,9 +367,59 @@ input[type="radio"]:checked + label {
   padding: 20px 52px;
   box-sizing: border-box;
   border-radius: 36px;
+  vertical-align: middle;
+  position: relative;
+  z-index: 1;
 }
+
+.button-secondary--small {
+  padding: 10px 28px;
+}
+
+.button-secondary:active {
+  transform: scale(0.9);
+  transition: transform 0.36s;
+}
+.button-secondary::before {
+  border: 2px solid #ffffff;
+  opacity: 0;
+  -webkit-transform: scale3d(1.2, 1.2, 1);
+  transform: scale3d(1, 1, 1);
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+}
+
+.button-secondary::before,
+.button-secondary::after {
+  content: "";
+  z-index: -1;
+  border-radius: inherit;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+  transition: transform 0.3s, opacity 0.3s;
+  -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+  transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+}
+
+.button-secondary:hover::before {
+  opacity: 1;
+  -webkit-transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+}
+.button-secondary:hover::after {
+  opacity: 0;
+  -webkit-transform: scale3d(0.8, 0.8, 1);
+  transform: scale3d(0.8, 0.8, 1);
+}
+
 .container-flex {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
@@ -232,17 +433,36 @@ input[type="radio"]:checked + label {
   box-shadow: 0px 20px 28px 0px rgba(0, 0, 0, 0.03);
 }
 
+.modal-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
+  justify-items: center;
+}
+
+.modal-grid__element1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.modal-grid__element2 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
 .box form {
   margin-left: 20px;
 }
 input[type="text"] {
   border: none;
   background-color: transparent;
-  font-size: 20px;
 }
 
 input[type="text"]:focus {
   outline: none;
+}
+
+.navbarNav {
 }
 
 .input,
